--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPftZ+d6JoKQXvOpxm5um9O",
+      "authorship_tag": "ABX9TyPMsAEP9BeSgTKAXsJDPgLX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,9 @@
         "id": "2izjBzysb_uy"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "print(0)"
+      ]
     }
   ]
 }
