Added PySpark transformations

--- a/PySpark.ipynb
+++ b/PySpark.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyObmZd11UghBj5CmX3xjaX2",
+      "authorship_tag": "ABX9TyNsNCWcVBb5rhfZX3Lhj73t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "2izjBzysb_uy",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e543b8cc-f9db-4b2e-e82c-a346a3a1e848"
+        "outputId": "d89b42af-f8f5-4cc0-b3a7-085948511a17"
       },
       "outputs": [
         {
@@ -68,9 +68,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jZKYXVy8pl7V",
-        "outputId": "af8ab88d-d83a-4501-fcfc-62d9ca793d37"
+        "outputId": "04d39f5a-2ced-491a-9cc4-11ca2081f553"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,15 +102,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TEed3Wt_qK1g",
-        "outputId": "02eac66d-0be2-417b-fff3-c06cb346896c"
+        "outputId": "654748af-375d-4c76-8395-917f2e1f5dd4"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Linux 28782d6161e8 6.1.123+ #1 SMP PREEMPT_DYNAMIC Sun Mar 30 16:01:29 UTC 2025 x86_64 x86_64 x86_64 GNU/Linux\n"
+            "Linux 098be2d284f5 6.1.123+ #1 SMP PREEMPT_DYNAMIC Sun Mar 30 16:01:29 UTC 2025 x86_64 x86_64 x86_64 GNU/Linux\n"
           ]
         }
       ]
@@ -131,12 +131,12 @@
       ],
       "metadata": {
         "id": "DiQfPCNRuJbt",
-        "outputId": "e9a633cb-e366-4bc6-a28a-50d523c4e962",
+        "outputId": "416276dd-74a1-44f4-e422-a7d8a715bcfa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
       "metadata": {
         "id": "BzryJA7xuPSd"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -167,7 +167,7 @@
       "metadata": {
         "id": "sEtcIcp3uqgd"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -190,7 +190,7 @@
       ],
       "metadata": {
         "id": "T6KbhEzOvcBC",
-        "outputId": "29eebe95-8e73-4416-b378-d757e95bf6b9",
+        "outputId": "eaf8195b-f23e-4019-b1c8-14771fb5ab31",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -210,6 +210,96 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Basic Transformation and Actions"
+      ],
+      "metadata": {
+        "id": "Su8v5zUzwnjy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = [\n",
+        "    (\"John\", \"Sales\", 3000),\n",
+        "    (\"Jane\", \"Finance\", 4000),\n",
+        "    (\"Mike\", \"Sales\", 3500),\n",
+        "    (\"Alice\", \"Finance\", 3800),\n",
+        "    (\"Bob\", \"IT\", 4500)\n",
+        "]\n",
+        "columns = [\"Name\", \"Department\", \"Salary\"]\n",
+        "df = spark.createDataFrame(data, columns)\n",
+        "df.show()"
+      ],
+      "metadata": {
+        "id": "xwBrt3oUwydZ",
+        "outputId": "4e21a8d0-6d50-4e3d-9454-e3bb08c45499",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----+----------+------+\n",
+            "| Name|Department|Salary|\n",
+            "+-----+----------+------+\n",
+            "| John|     Sales|  3000|\n",
+            "| Jane|   Finance|  4000|\n",
+            "| Mike|     Sales|  3500|\n",
+            "|Alice|   Finance|  3800|\n",
+            "|  Bob|        IT|  4500|\n",
+            "+-----+----------+------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_filtered = df.filter(df.Salary > 3500)\n",
+        "df_filtered.show()"
+      ],
+      "metadata": {
+        "id": "lhx_lCd_xdfS",
+        "outputId": "deea3db6-5f41-4020-b673-2d516ca27f76",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----+----------+------+\n",
+            "| Name|Department|Salary|\n",
+            "+-----+----------+------+\n",
+            "| Jane|   Finance|  4000|\n",
+            "|Alice|   Finance|  3800|\n",
+            "|  Bob|        IT|  4500|\n",
+            "+-----+----------+------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "d8ZdrgWuyMao"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
