--- a/PySpark.ipynb
+++ b/PySpark.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNsNCWcVBb5rhfZX3Lhj73t",
+      "authorship_tag": "ABX9TyMcmsrvAGJdPfBrvkxhpILg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -235,11 +235,11 @@
         "df.show()"
       ],
       "metadata": {
-        "id": "xwBrt3oUwydZ",
-        "outputId": "4e21a8d0-6d50-4e3d-9454-e3bb08c45499",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xwBrt3oUwydZ",
+        "outputId": "4e21a8d0-6d50-4e3d-9454-e3bb08c45499"
       },
       "execution_count": 13,
       "outputs": [
@@ -268,11 +268,11 @@
         "df_filtered.show()"
       ],
       "metadata": {
-        "id": "lhx_lCd_xdfS",
-        "outputId": "deea3db6-5f41-4020-b673-2d516ca27f76",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lhx_lCd_xdfS",
+        "outputId": "deea3db6-5f41-4020-b673-2d516ca27f76"
       },
       "execution_count": 14,
       "outputs": [
@@ -294,9 +294,41 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#Grouped and Aggregates\n",
+        "df_grouped = df.groupBy(\"Department\").avg(\"Salary\")\n",
+        "df_grouped.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d8ZdrgWuyMao",
+        "outputId": "51f3e9c2-eb50-45f1-a517-7e453659de4e"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+-----------+\n",
+            "|Department|avg(Salary)|\n",
+            "+----------+-----------+\n",
+            "|     Sales|     3250.0|\n",
+            "|   Finance|     3900.0|\n",
+            "|        IT|     4500.0|\n",
+            "+----------+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "d8ZdrgWuyMao"
+        "id": "Efaol6iDy5om"
       },
       "execution_count": null,
       "outputs": []
