--- a/PySpark.ipynb
+++ b/PySpark.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcmsrvAGJdPfBrvkxhpILg",
+      "authorship_tag": "ABX9TyOWjpSlOP4gSnhAvtfALQ05",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "2izjBzysb_uy",
         "colab": {
@@ -70,7 +70,7 @@
         "id": "jZKYXVy8pl7V",
         "outputId": "04d39f5a-2ced-491a-9cc4-11ca2081f553"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
         "id": "TEed3Wt_qK1g",
         "outputId": "654748af-375d-4c76-8395-917f2e1f5dd4"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -136,7 +136,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
       "metadata": {
         "id": "BzryJA7xuPSd"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -167,7 +167,7 @@
       "metadata": {
         "id": "sEtcIcp3uqgd"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -180,7 +180,7 @@
       "metadata": {
         "id": "TiigkhSfu8BI"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -195,7 +195,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,7 +241,7 @@
         "id": "xwBrt3oUwydZ",
         "outputId": "4e21a8d0-6d50-4e3d-9454-e3bb08c45499"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,7 +274,7 @@
         "id": "lhx_lCd_xdfS",
         "outputId": "deea3db6-5f41-4020-b673-2d516ca27f76"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +306,7 @@
         "id": "d8ZdrgWuyMao",
         "outputId": "51f3e9c2-eb50-45f1-a517-7e453659de4e"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -326,9 +326,43 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Add new column: Salary with bonus (10%)\n",
+        "df_bonus = df.withColumn(\"Salary_With_Bonus\", df.Salary * 1.1)\n",
+        "df_bonus.show()"
+      ],
+      "metadata": {
+        "id": "Efaol6iDy5om",
+        "outputId": "07222973-029e-4c23-bf61-ba50f4ba2618",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----+----------+------+------------------+\n",
+            "| Name|Department|Salary| Salary_With_Bonus|\n",
+            "+-----+----------+------+------------------+\n",
+            "| John|     Sales|  3000|3300.0000000000005|\n",
+            "| Jane|   Finance|  4000|            4400.0|\n",
+            "| Mike|     Sales|  3500|3850.0000000000005|\n",
+            "|Alice|   Finance|  3800|            4180.0|\n",
+            "|  Bob|        IT|  4500|            4950.0|\n",
+            "+-----+----------+------+------------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Efaol6iDy5om"
+        "id": "zkb5fpnS0qNb"
       },
       "execution_count": null,
       "outputs": []
