--- a/PySpark.ipynb
+++ b/PySpark.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOWjpSlOP4gSnhAvtfALQ05",
+      "authorship_tag": "ABX9TyMI4rNEVEdcsnrn9a1TI7PC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -338,7 +338,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,9 +360,224 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from pyspark.sql.functions import col,upper,lower,concat_ws,when,length\n",
+        "df.show()"
+      ],
+      "metadata": {
+        "id": "zkb5fpnS0qNb",
+        "outputId": "e53c00d8-cc90-4b4b-d2cf-838945d0a1be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----+----------+------+\n",
+            "| Name|Department|Salary|\n",
+            "+-----+----------+------+\n",
+            "| John|     Sales|  3000|\n",
+            "| Jane|   Finance|  4000|\n",
+            "| Mike|     Sales|  3500|\n",
+            "|Alice|   Finance|  3800|\n",
+            "|  Bob|        IT|  4500|\n",
+            "+-----+----------+------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Changes case transformations\n",
+        "df_upper  = df.withColumn(\"Name_Upper\",upper(col(\"Name\")))\n",
+        "df_lower  = df.withColumn(\"Name_Lower\",lower(col(\"Name\")))\n",
+        "df_upper.show()\n",
+        "df_lower.show()\n"
+      ],
+      "metadata": {
+        "id": "HZJ2lsJA2jST",
+        "outputId": "22e37799-bdf7-45f8-b371-77721272fa46",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----+----------+------+----------+\n",
+            "| Name|Department|Salary|Name_Upper|\n",
+            "+-----+----------+------+----------+\n",
+            "| John|     Sales|  3000|      JOHN|\n",
+            "| Jane|   Finance|  4000|      JANE|\n",
+            "| Mike|     Sales|  3500|      MIKE|\n",
+            "|Alice|   Finance|  3800|     ALICE|\n",
+            "|  Bob|        IT|  4500|       BOB|\n",
+            "+-----+----------+------+----------+\n",
+            "\n",
+            "+-----+----------+------+----------+\n",
+            "| Name|Department|Salary|Name_Lower|\n",
+            "+-----+----------+------+----------+\n",
+            "| John|     Sales|  3000|      john|\n",
+            "| Jane|   Finance|  4000|      jane|\n",
+            "| Mike|     Sales|  3500|      mike|\n",
+            "|Alice|   Finance|  3800|     alice|\n",
+            "|  Bob|        IT|  4500|       bob|\n",
+            "+-----+----------+------+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Concatenate columns\n",
+        "df_concat =df.withColumn(\"Name_Department\",concat_ws(\" - \",\"Name\",\"Department\"))\n",
+        "df_concat.show()"
+      ],
+      "metadata": {
+        "id": "jzsyI9oB25WF",
+        "outputId": "cdc97dd2-50e5-43d2-d1d4-67d25da08bea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Column<'Name'>\n",
+            "+-----+----------+------+---------------+\n",
+            "| Name|Department|Salary|Name_Department|\n",
+            "+-----+----------+------+---------------+\n",
+            "| John|     Sales|  3000|   John - Sales|\n",
+            "| Jane|   Finance|  4000| Jane - Finance|\n",
+            "| Mike|     Sales|  3500|   Mike - Sales|\n",
+            "|Alice|   Finance|  3800|Alice - Finance|\n",
+            "|  Bob|        IT|  4500|       Bob - IT|\n",
+            "+-----+----------+------+---------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_lenth = df.withColumn(\"Name_Length\",length(col(\"Name\")))\n",
+        "df_lenth.show()"
+      ],
+      "metadata": {
+        "id": "CNTUn2wu3O7m",
+        "outputId": "945c5de7-c1bb-4d6c-c6db-c96ccd0318e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----+----------+------+-----------+\n",
+            "| Name|Department|Salary|Name_Length|\n",
+            "+-----+----------+------+-----------+\n",
+            "| John|     Sales|  3000|          4|\n",
+            "| Jane|   Finance|  4000|          4|\n",
+            "| Mike|     Sales|  3500|          4|\n",
+            "|Alice|   Finance|  3800|          5|\n",
+            "|  Bob|        IT|  4500|          3|\n",
+            "+-----+----------+------+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Conditional Column (Salary Category)\n",
+        "df_conditional = df.withColumn(\"Salary Category\",when(col(\"Salary\") >= 4000,\"High\")\n",
+        "                  .when(col(\"Salary\") >= 3500,\"Med\").otherwise(\"Low\"))\n",
+        "df_conditional.show()"
+      ],
+      "metadata": {
+        "id": "XxfZ5zwr4SVt",
+        "outputId": "d261a12e-05bb-4e54-aee1-fee8774c867a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----+----------+------+---------------+\n",
+            "| Name|Department|Salary|Salary Category|\n",
+            "+-----+----------+------+---------------+\n",
+            "| John|     Sales|  3000|            Low|\n",
+            "| Jane|   Finance|  4000|           High|\n",
+            "| Mike|     Sales|  3500|            Med|\n",
+            "|Alice|   Finance|  3800|            Med|\n",
+            "|  Bob|        IT|  4500|           High|\n",
+            "+-----+----------+------+---------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_renamed = df_conditional.withColumnRenamed(\"Salary\",\"Base Salary\")\n",
+        "df_renamed.show()"
+      ],
+      "metadata": {
+        "id": "1uchOuhf5AjS",
+        "outputId": "1b758c8c-732b-4fcb-c634-9c9fbec2a25a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----+----------+-----------+---------------+\n",
+            "| Name|Department|Base Salary|Salary Category|\n",
+            "+-----+----------+-----------+---------------+\n",
+            "| John|     Sales|       3000|            Low|\n",
+            "| Jane|   Finance|       4000|           High|\n",
+            "| Mike|     Sales|       3500|            Med|\n",
+            "|Alice|   Finance|       3800|            Med|\n",
+            "|  Bob|        IT|       4500|           High|\n",
+            "+-----+----------+-----------+---------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "zkb5fpnS0qNb"
+        "id": "z4I3Eyhf6WWW"
       },
       "execution_count": null,
       "outputs": []
